[UPDATE] Added Magic Missile Recipe
Added new folder "recipes" and the recipe for magic missile.
Included a link in the index.html to the recipe in the recipes folder.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <p><h1>Odin Recipes</h1></p>
+    <p><a href="recipes/magic-missile.html">Magic Missile</a></p>
 </body>
 </html>
