[TASK] polished Recipes
Polished magic-missile.html, added the completed sleep.html and sleep.jpeg.

Also changed the link in the index.html to a safe new tab link.

--- a/recipes/magic-missile.html
+++ b/recipes/magic-missile.html
@@ -1,1 +1,24 @@
+<title>Magic Missile</title>
 <h1>Magic Missile</h1>
+<img src="../imgs/magic-missile.jpeg" alt="Image of three magic missiles.">
+<h4>This is one barrage of magic missiles.</h4>
+<p>1st-level evocation spell </p>
+<p>Casting Time: 1 action </p>
+<p>Range: 120 feet</p>
+<p>Duration: Instantaneous</p>
+
+<p>You create three glowing darts of magical force. Each dart hits a creature of your choice that you can see within range. A dart deals 1d4 + 1 force damage to its target. The darts all strike simultaneously, and you can direct them to hit one creature or several.</p>
+<p>At Higher Levels.
+When you cast this spell using a spell slot of 2nd level or higher, the spell creates one more dart for each slot level above 1st.
+Classes: Sorcerer, Wizard</p>
+<h5>Components:</h5>
+<ul>
+    <li>V</li>
+    <li>S</li>
+</ul>
+<h5>Steps:</h5>
+<ol>
+    <li>Make out a target.</li>
+    <li>Aim.</li>
+    <li>Shoot.</li>
+</ol>
