--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <p><h1>Odin Recipes</h1></p>
-    <p><a href="recipes/magic-missile.html">Magic Missile</a></p>
+    <h1>Odin Recipes</h1>
+    <a href="recipes/magic-missile.html" target="_blank" rel="noopener noreferrer">Magic Missile</a>
 </body>
 </html>
