--- a/index.html
+++ b/index.html
@@ -3,10 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Odin Recipes</title>
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="recipes/magic-missile.html" target="_blank" rel="noopener noreferrer">Magic Missile</a>
+    <ul>
+        <li><a href="recipes/magic-missile.html" target="_blank" rel="noopener noreferrer">Magic Missile</a></li>
+        <li><a href="recipes/sleep.html" target="_blank" rel="noopener noreferer">Sleep</a></li>
+        <li><a href="recipes/tiny-hut.html" target="_blank" rel="noopener noreferer">Tiny Hut</a></li>
+        <li><a href="recipes/fireball.html" target="_blank" rel="noopener noreferer">Fireball</a></li>
+    </ul>
 </body>
 </html>
