[UPDATE] added Homelink
Added a link at the bottom of the "recipes", which leads to the homepage.

--- a/recipes/magic-missile.html
+++ b/recipes/magic-missile.html
@@ -9,8 +9,7 @@
 
 <p>You create three glowing darts of magical force. Each dart hits a creature of your choice that you can see within range. A dart deals 1d4 + 1 force damage to its target. The darts all strike simultaneously, and you can direct them to hit one creature or several.</p>
 <p>At Higher Levels.
-When you cast this spell using a spell slot of 2nd level or higher, the spell creates one more dart for each slot level above 1st.
-Classes: Sorcerer, Wizard</p>
+When you cast this spell using a spell slot of 2nd level or higher, the spell creates one more dart for each slot level above 1st.</p>
 <h5>Components:</h5>
 <ul>
     <li>V</li>
@@ -22,3 +21,5 @@ Classes: Sorcerer, Wizard</p>
     <li>Aim.</li>
     <li>Shoot.</li>
 </ol>
+<p>Classes: Sorcerer, Wizard</p>
+<a href="../index.html">Home</a>
