--- a/recipes/sleep.html
+++ b/recipes/sleep.html
@@ -23,10 +23,11 @@
     <li>rose petals</li>
     <li>or a cricket</li>
 </ul>
-<p>Classes: Bard, Sorcerer, Wizard</p>
 <h6>Steps:</h6>
 <ol>
     <li>Roll 5d8.</li>
     <li>Choose an impact point.</li>
     <li>Subtracting from your rolled sum, each creature with less or equal hitpoints will fall asleep.</li>
 </ol>
+<p>Classes: Bard, Sorcerer, Wizard</p>
+<a href="../index.html">Home</a>
