--- a/recipes/tiny-hut.html
+++ b/recipes/tiny-hut.html
@@ -15,7 +15,6 @@
     <li>M</li>
     <li>a small crystal bead</li>
 </ul>
-Classes: Bard, Wizard
 <p>A 10-foot-radius immobile dome of force springs into existence around and above you and remains stationary for the duration. The spell ends if you leave its area.</p>
 <p>Nine creatures of Medium size or smaller can fit inside the dome with you. The spell fails if its area includes a larger creature or more than nine creatures. Creatures and objects within the dome when you cast this spell can move through it freely. All other creatures and objects are barred from passing through it. Spells and other magical effects can't extend through the dome or be cast through it. The atmosphere inside the space is comfortable and dry, regardless of the weather outside.</p>
 <p>Until the spell ends, you can command the interior to become dimly lit or dark. The dome is opaque from the outside, of any color you choose, but it is transparent from the inside.</p>
@@ -25,3 +24,5 @@ Classes: Bard, Wizard
     <li>Cast tiny hut.</li>
     <li>Get comfy and take rest.</li>
 </ol>
+<p>Classes: Bard, Wizard</p>
+<a href="../index.html">Home</a>
