--- a/index.html
+++ b/index.html
@@ -7,12 +7,12 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Odin Recipes</h1>
+    <h1 class="Überschrift">Odin Recipes</h1>
     <ul>
-        <li><a href="recipes/magic-missile.html" target="_blank" rel="noopener noreferrer">Magic Missile</a></li>
-        <li><a href="recipes/sleep.html" target="_blank" rel="noopener noreferer">Sleep</a></li>
-        <li><a href="recipes/tiny-hut.html" target="_blank" rel="noopener noreferer">Tiny Hut</a></li>
-        <li><a href="recipes/fireball.html" target="_blank" rel="noopener noreferer">Fireball</a></li>
+        <li><a class="spell" href="recipes/magic-missile.html" target="_blank" rel="noopener noreferrer">Magic Missile</a></li>
+        <li><a class="spell" href="recipes/sleep.html" target="_blank" rel="noopener noreferer">Sleep</a></li>
+        <li><a class="spell" href="recipes/tiny-hut.html" target="_blank" rel="noopener noreferer">Tiny Hut</a></li>
+        <li><a class="spell" href="recipes/fireball.html" target="_blank" rel="noopener noreferer">Fireball</a></li>
     </ul>
 </body>
 </html>
